--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mueena mueen</title>
+    <link rel="icon" href="/assets/PSX_20230704_225702.jpg">
     <style>
         body{
             display:flex;
@@ -13,21 +14,31 @@
             background-color: rgb(250, 221, 184); 
         }
         img {
-            width: 250px;
-            height: 250px;
+            width: 100px;
+            height: 100px;
             border-radius: 100px;
             border: 2px solid rgb(0, 0, 0);
         }
     </style>
 </head>
 <body>
-    <img src="C:\Users\Mueena Mueen\ijse\HTML\assets\PSX_20230704_225702.jpg" alt=""> 
-    <h1>mueena</h1>
-    <h2>mueena</h2>
-    <h3>mueena</h3>  
-    <h4>mueena</h4>
-    <h5>mueena</h5>
-    <p1>hi hi hi</p1>
-    <p2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, delectus? Ab error earum nulla perspiciatis sed sequi quia odit! Dolorem libero molestias eaque accusamus laboriosam, ab nihil adipisci earum ex.</p2>
-</body>
+    <h1>Internet Technologies</h1>
+
+    <img src="./assets/PSX_20230704_225702.jpg" alt=""> 
+    <h2>Mueena Mueen</h2>
+    <h3>Module Content</h3>  
+
+    <ul>
+    <li><a href="C:\Users\Mueena Mueen\ijse\HTML\pages\lesson-text-semantics.html" 
+        target="_blank" style="text-decoration: none; color: black;">Lesson Text Semantics</a>
+    </li>
+    <li><a href="C:\Users\Mueena Mueen\ijse\HTML\pages\lesson-list.html" 
+        target="_blank" style="text-decoration: none; color: black;">Lesson list</a>
+    </li>  
+    <li><a href="C:\Users\Mueena Mueen\ijse\HTML\pages\lesson-multimedia.html"
+         target="_blank" style="text-decoration: none; color: black;">Lesson Multimedia</a>
+    </li>
+    </ul>
+   
+   </body>
 </html>
